<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/spark_dict_activity_top_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <net.bancer.sparkdict.views.SearchInputField
            android:id="@+id/searchTextView"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:inputType="textPhonetic">

            <requestFocus android:id="@+id/focus_requester" />
        </net.bancer.sparkdict.views.SearchInputField>

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search"
            android:padding="10dp"
            android:src="@drawable/ic_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/find_on_page_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="true"
        android:fadingEdge="horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/find_on_page_edit_text"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:autofillHints="none"
            android:hint="@string/find_on_page_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/find_on_page_next_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            xmlns:tools="http://schemas.android.com/tools"
            tools:ignore="HardcodedText"
            android:contentDescription="@string/find_on_page_next"
            android:onClick="onFindNextWordOnPageButtonClick"
            android:text="&#x25BC;"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/find_on_page_previous_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            xmlns:tools="http://schemas.android.com/tools"
            tools:ignore="HardcodedText"
            android:contentDescription="@string/find_on_page_previous"
            android:onClick="onFindPreviousWordOnPageButtonClick"
            android:text="&#x25B2;"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/find_on_page_close_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            xmlns:tools="http://schemas.android.com/tools"
            tools:ignore="HardcodedText"
            android:contentDescription="@string/find_on_page_close"
            android:onClick="onCloseFindOnPageBarButtonClick"
            android:text="&#x2715;"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/articles_scroll_view"
        android:clipToPadding="false"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/find_on_page_layout"
        android:layout_below="@id/search_layout">

        <net.bancer.sparkdict.views.LexicalEntriesListView
            android:id="@+id/articles_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ProgressBar
        android:id="@+id/search_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/find_on_page_layout"
        android:layout_below="@id/search_layout"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>